# panda_uli_demo

./: .gitignore  README.md  compile  output.txt
Actuation/Actuation_Group/: CMakeLists.txt  package.xml
Actuation/Actuation_Group/launch/: Actuation.launch  actuation_test.launch
Actuation/Actuation_Group/nodes/: actuation_group_launcher
Actuation/PandaController/: CMakeLists.txt
Actuation/PandaController/include/: PandaController.h  Trajectory.h
Actuation/PandaController/src/: Falcon.cpp  ForceTorqueListener.cpp  Kinematics.cpp  PandaControllerAccessors.cpp  Trajectory.cpp
Actuation/collision_free_ik/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  package.xml
Actuation/collision_free_ik/config/: environment.json  panda.urdf  panda_collision.json  solver_config.yaml
Actuation/collision_free_ik/cpp_src/: main.cpp
Actuation/collision_free_ik/include/: IKSolver.h  IKSolverInterface.h
Actuation/collision_free_ik/launch/: ik.launch
Actuation/collision_free_ik/src/: geometry.rs  lib.rs  planner.rs  solver.rs
Actuation/collision_free_ik/src/solver/: utils.rs
Actuation/collision_free_ik/srv/: CFIK.srv
Actuation/collision_free_ik/test/: ik_test.py
Actuation/controlled_valve/: CMakeLists.txt  package.xml
Actuation/controlled_valve/nodes/: controlledValveNode
Actuation/diagnostics/: CMakeLists.txt  package.xml
Actuation/diagnostics/nodes/: ee_pose_checker  panda_limits_checker  paper_status
Actuation/diagnostics/src/: KDLfk.cpp
Actuation/ft_sensor/: CMakeLists.txt  package.xml
Actuation/ft_sensor/nodes/: ee_selector  ft_processor
Actuation/ft_sensor/src/: ForceTorqueSocket.cpp
Actuation/hybrid_controller/: CMakeLists.txt  package.xml
Actuation/hybrid_controller/msg/: HybridPose.msg
Actuation/hybrid_controller/nodes/: hybrid_controller
Actuation/kinect_ros/: CMakeLists.txt  package.xml
Actuation/kinect_ros/launch/: kinect_launcher.launch
Actuation/kinect_ros/nodes/: kinect_toggler
Actuation/panda_ros/: CMakeLists.txt  package.xml
Actuation/panda_ros/launch/: joint_state_pub.launch  runPandaROS.launch
Actuation/panda_ros/src/: panda_ros.cpp
Actuation/panda_ros/test/: hybrid_control_test_position  joint_control_test  mocap_calib
Actuation/panda_ros/urdfs/: panda.urdf
Actuation/panda_ros_msgs/: CMakeLists.txt  package.xml
Actuation/panda_ros_msgs/msg/: JointPose.msg
Actuation/panda_sim/: CMakeLists.txt  package.xml
Actuation/panda_sim/launch/: joint_state_pub.launch  sim.launch
Actuation/panda_sim/meshes/: camera_holder_assem.STL  force_torque_sensor.dae  sander_orbital_w_vib.STL
Actuation/panda_sim/nodes/: joint_republisher  rviz_manager  simulator  static_publisher
Actuation/panda_sim/rviz/: sim.rviz  sim.rviz.orig
Execution/affordance_corrections/: CMakeLists.txt  README.md  package.xml  plugin_desc.xml  setup.py
Execution/affordance_corrections/launch/: affordance_corrections.launch  affordance_specification.launch  int_marker_specification.launch  pc_scene.rviz  pc_scene_interactivemarkers.rviz  pc_scene_no_teleop.rviz  spacemouse_affordance_specification.launch
Execution/affordance_corrections/msg/: AffordanceFit.msg  AffordanceFits.msg
Execution/affordance_corrections/nodes/affordance_corrections/: affordance_engine.py  build_cpp_fitting_testing.sh  cpp_fitting_testing.py  ros_affordance_wrapper.py  ros_uli_wrapper.py
Execution/affordance_corrections/nodes/affordance_corrections/affordance_helpers/: InputHandler.py  InteractiveMesh.py  Model.py  ObjOfInterest.py  cython_helpers.py  pcl_helpers.py  registration.py  rviz_helpers.py  urdf_helpers.py
Execution/affordance_corrections/nodes/affordance_corrections/testcode/: CMakeLists.txt  README.md  ctypestruct_testing.py  diameter_testing.py  getpointstesting.cpp  getpointstesting.py  openmp_testing.py  picoNN.cpp  testOpenMP.cpp  testctypestruct.cpp  urdf_helpers.cpp
Execution/affordance_corrections/nodes/affordance_corrections/testcode/icp/: icp.cpp  (+1 more)
Execution/affordance_corrections/nodes/affordance_corrections/utilities/: createPC.py  pc_conversions.py
Execution/affordance_corrections/src/: correctionspanel.cpp  correctionspanel.h
Execution/core_robotics/: CMakeLists.txt  package.xml  setup.py
Execution/core_robotics/nodes/core_robotics/: PyBSpline.py  bagfile_reader.py  dataviz.py  filters.py  quaternion.py  rigid_registration.py  ros_data_type_helpers.py  rotation_identities.py  transform.py
Execution/corrective_input/: CMakeLists.txt  dtw.pkl  package.xml
Execution/corrective_input/launch/execution/: execute_sealant_fd.launch
Execution/corrective_input/src/: ForceDimensionOneDZDController.cpp
Execution/corrective_shared_autonomy/: CMakeLists.txt  package.xml
Execution/corrective_shared_autonomy/include/: BSplineSurface.h
Execution/corrective_shared_autonomy/launch/demonstrations/: demo_roller.launch  demo_sealant_fd.launch  rigid_registration.launch
Execution/corrective_shared_autonomy/nodes/corrective_shared_autonomy/: DMP_task_model_testing.ipynb  manually_constructed_sanding_models.ipynb  run_models.py  run_templates  run_templates.py  task_models_fragmented.ipynb  task_subdivision.ipynb  voice_bag.py
Execution/corrective_shared_autonomy/src/: ForceDimensionZDController.cpp  ForceDimension_Divisible.cpp  KDLik.cpp
Execution/corrective_shared_autonomy/srv/: IK.srv
ULIConfig/: CMakeLists.txt  package.xml
ULIConfig/config/: transforms.yaml
ULIConfig/launch/: cadtemplate0_1.launch  cadtemplate0local.launch  cadtemplate0remote.launch  middleend.launch  robot.launch
ULIConfig/registration_models/: IRC_piece1.STL  IRC_piece1.csv  IRC_piece1_2pass.STL  IRC_piece1_2pass.csv  IRC_piece1_2pass_visual.STL  IRC_piece1_visual.STL  anna_flat1.csv  anna_flat1_surf.STL  anna_flat1_visual.STL  anna_study1.STL  anna_study1.csv  anna_study1_visual.STL  layup_tool2.STL  layup_tool2_corrected.STL  layup_tool2_surface_demo.STL  layup_tool2_surface_demo.csv  layup_tool2_surface_demo.pkl  stringer_surface_demo.STL  stringer_surface_demo.csv  task_models_fragmented.ipynb
ULIConfig/rviz/: sim.rviz
ULIConfig/urdfs/: panda.urdf
(+144 files in other folders)
