<?xml version="1.0"?>
<package format="2">
    <name>uli_config</name>
    <version>1.0.0</version>
    <description>
        Place to store models, launch files, etc.
    </description>
    <maintainer email="wisconsinhci@gmail.com">Mike H.</maintainer>
    <license>WTFPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
