[package]
name = "collision_free_ik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "collision_free_ik"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "*"
serde = {version = "*", features = ["derive", "alloc"] }
serde_yaml = "0.8"
urdf-rs = "*"
optimization_engine = {version = "*", feautres = ["alloc"]}
nalgebra = "0.26"
k = "0.25"
rapier3d-f64 = "*"
stl_io = "*"