<package format="2">
  <name>collision_free_ik</name>
  <version>0.1.0</version>
  <description>
    Does some IK. Doesn't do some hitting things.
  </description>
  <maintainer email="kevinwelsh132@gmail.com">Kevin Welsh</maintainer>
  <license>BSD</license>

  <author>Kevin Welsh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>franka_core_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>