<?xml version="1.0.0"?>
<package format="2">
    <name>controlled_valve</name>
    <version>1.0.0</version>
    <description>
        Code for toggling pneumatic solenoid valve
    </description>
    <maintainer email="wisconsinhci@gmail.com">Mike H.</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
