<?xml version="1.0.0"?>
<package format="2">
    <name>ft_sensor</name>
    <version>1.0.0</version>
    <description>
        FT utilities: reading, rotating, filtering, biasing
    </description>
    <maintainer email="wisconsinhci@gmail.com">Mike H.</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>hybrid_controller</depend>

</package>
