<?xml version="1.0.0"?>
<package format="2">
    <name>kinect_ros</name>
    <version>1.0.0</version>
    <description>
        Kinect toggler
    </description>
    <maintainer email="wisconsinhci@gmail.com">Emmanuel S.</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
