<?xml version="1.0"?>
<package format="2">
    <name>affordance_corrections</name>
    <version>1.0.0</version>
    <description>
        Affordance Template/Primitive Specification Using Semi-Autonomy and Corrections
    </description>
    <maintainer email="mhagenow@wisc.edu">Mike Hagenow</maintainer>
    <license>WTFPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>qtbase5-dev</build_depend>
    <build_depend>tf</build_depend>
    <depend>sensor_msgs</depend>
    <depend>rviz</depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>libqt5-core</exec_depend>
    <exec_depend>libqt5-gui</exec_depend>
    <exec_depend>libqt5-widgets</exec_depend>
    <exec_depend>tf</exec_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <export>
        <rviz plugin="${prefix}/plugin_desc.xml"/>
    </export>

</package>
