<?xml version="1.0"?>
<package format="2">
    <name>corrective_input</name>
    <version>1.0.0</version>
    <description>
        Code to run and send commands from different input devices to CSA
    </description>
    <maintainer email="wisconsinhci@gmail.com">Mike H.</maintainer>
    <license>WTFPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
