<?xml version="1.0"?>
<package format="2">
    <name>corrective_shared_autonomy</name>
    <version>1.0.0</version>
    <description>
        Contains code to preprocess demonstrations, learn task models, and execute with real-time user corrections
    </description>
    <maintainer email="wisconsinhci@gmail.com">Mike H.</maintainer>
    <license>WTFPL</license>

    <!-- <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>kdl_parser</depend>
    <depend>tf</depend>
    <depend>message_runtime</depend>
    <depend>liborocos-kdl</depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>tf</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>kdl_parser</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>liborocos-kdl</build_depend>
    <build_depend>data_recording</build_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nodelet</exec_depend>
    <exec_depend>kdl_parser</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>liborocos-kdl</exec_depend>

</package>
